[project]
name = "resfit-pytorch"
version = "0.0.1"
description = "ResFit"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'robotics',
    'RL fine-tuning'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "accelerate",
    "einx>=0.3.0",
    "einops>=0.8.1",
    "ema-pytorch",
    "torch>=2.4",
    "x-mlps-pytorch>=0.0.29"
]

[project.urls]
Homepage = "https://pypi.org/project/resfit-pytorch/"
Repository = "https://github.com/lucidrains/resfit-pytorch"

[project.optional-dependencies]
examples = [
    "pi-zero-pytorch"
]
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mmdit"]
